--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -5,12 +5,14 @@
 <form method="POST" action='@Url.Action("Logar")'>
 
     <label for="">Nome</label>
-    <input type="text">
+    <input type="textl">
 
     <label for="">E-mail</label>
-    <input type="text">
+    <input type="email">
 
     <label for="">Senha</label>
-    <input type="text">
+    <input type="password">
+
+    <button type="submit">Enviar</button>
 
 </form>
